# scaf_code

./: .gitignore  Makefile  README.bak  README.md  pyproject.toml
scaf_code/: __main__.py  cli.py  main.py  scaffold_code.py
tests/: test_cli.py  test_scaffold_code.py
