[tool.poetry]
name = "scaf-code"
version = "0.1.0"
description = "scaf_code is a tool for generating code from reference and specification files by Large Language Models."
authors = ["Ken Morishita <mokemokechicken@gmail.com>"]
readme = "README.md"
license = "MIT"

[tool.poetry.dependencies]
python = "^3.7.1"
openai = "^1.1.2"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
